cabal-version:      3.0
name:               sentencepiece-haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Collin Arnett
maintainer:         collin@arnett.it
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  SentencePiece
    -- other-modules:
    -- other-extensions:
    -- TODO: figure out how to include sentencepiece's include file here
    build-depends:    base ^>=4.17.2.0,
                      inline-c-cpp,
                      template-haskell,
                      directory
    hs-source-dirs:   src
    default-language: Haskell2010
    extra-libraries:  sentencepiece,
                      stdc++
    extra-ghci-libraries: stdc++
    -- 'optcxx':      pass options to c++ compiler
    ghc-options:      -optcxx-Werror
                      -optcxx-std=c++2a

    cxx-options:      -std=c++2a -Werror

test-suite sentencepiece-haskell-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.0,
        sentencepiece-haskell,
        hspec 
